--- a/pubman/pubman_presentation/src/main/webapp/viewItem/ViewItemMedium.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/ViewItemMedium.jspf
@@ -125,6 +125,7 @@
 					<tr:goLink id="lnkSearchHitsURL" targetFrame="." destination="#{item.link}/component/#{fileBean.file.reference.objectId}/#{fileBean.file.name}#search=#{fileBean.openPDFSearchParameter}" shortDesc="#{fileBean.file.description}">
 						<h:outputText value="#{fileBean.fileName}"/>
 					</tr:goLink>
+					<h:outputText value="(#{fileBean.numberOfSearchHits} #{lbl.SearchResultList_hits})"/>
 					<br/>
 					<tr:iterator id="fileSearchHitIterator" var="hit" value="#{fileBean.searchHits}" varStatus="index" >
 							<h:outputText value="#{hit.beforeSearchHitString}"/>
