Former-commit-id: a164b032de40460c47a0e7dd7757a9839be6e281

--- a/pubman/pubman_presentation/src/main/webapp/search/AdvancedSearchEdit.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/search/AdvancedSearchEdit.jspf
@@ -32,6 +32,7 @@
 <%@ taglib uri="http://myfaces.apache.org/trinidad" prefix="tr"%>
 
 
+	<%@ include file="ui/ContextCriterionCollection.jspf"%>
 	<%@ include file="ui/AnyFieldCriterionCollection.jspf"%>
 	<%@ include file="ui/PersonCriterionCollection.jspf"%>
 	<%@ include file="ui/DateCriterionCollection.jspf"%>
