--- a/common_services/citationmanager/src/main/resources/CitationStyles/citation-style.jrxml
+++ b/common_services/citationmanager/src/main/resources/CitationStyles/citation-style.jrxml
@@ -22,7 +22,7 @@
 	<import value="java.util.*" />
 	<import value="net.sf.jasperreports.engine.*" />
 	<import value="net.sf.jasperreports.engine.data.*" />
-	<reportFont name="Normal" isDefault="false" fontName="Arial" size="12" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false" pdfFontName="ARIAL.TTF" pdfEncoding="Identity-H" isPdfEmbedded="true"/>
+	<style name="Normal" isDefault="true" fontName="Arial" fontSize="12" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false" pdfFontName="ARIAL.TTF" pdfEncoding="Identity-H" isPdfEmbedded="true"/>
 
 	<queryString language="xPath"><![CDATA[/snippets/bibliographicCitation]]></queryString>
 
@@ -117,9 +117,7 @@
 					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 </box>
-					<textElement textAlignment="Justified" verticalAlignment="Top" rotation="None" markup="styled" lineSpacing="1_1_2">
-						<font reportFont="Normal"/>
-					</textElement>
+					<textElement textAlignment="Justified" verticalAlignment="Top" rotation="None" markup="styled" lineSpacing="1_1_2"/>
 				<textFieldExpression   class="java.lang.String"><![CDATA[$F{bibliographicCitation} + "\n"]]></textFieldExpression>
 				</textField>
 			</band>
