--- a/pubman/pubman_presentation/src/main/webapp/header/ui/MainMenu.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/header/ui/MainMenu.jspf
@@ -55,6 +55,16 @@
 
 
 
+
+	<h:outputLink id="lnkYearbookWorkspace" styleClass="free_area0" title="#{tip.MainMenu_QAWSPage}" value="#{ApplicationBean.appContext}YearbookCandidatesPage.jsp" rendered="#{BreadcrumbItemHistorySessionBean.lastPageIdentifier != 'YearbookWSPage' and (LoginHelper.isModerator || LoginHelper.isMdEditor) and ContextListSessionBean.moderatorContextListSize>0}">
+		<h:outputText value="#{lbl.mainMenu_lnkYearbookWorkspace}" />
+	</h:outputLink>
+	<h:outputText styleClass="free_area0" value="#{lbl.mainMenu_lnkYearbookWorkspace}" rendered="#{LoginHelper.isModerator and ContextListSessionBean.moderatorContextListSize>0 and BreadcrumbItemHistorySessionBean.lastPageIdentifier == 'YearbookWSPage'}" />
+
+
+
+
+
 	<h:outputLink id="lnkSubmission" styleClass="free_area0" title="#{tip.actionMenu_lnkSubmission}" value="#{ApplicationBean.appContext}SubmissionPage.jsp" rendered="#{BreadcrumbItemHistorySessionBean.lastPageIdentifier != 'CreateItemPage' and BreadcrumbItemHistorySessionBean.lastPageIdentifier != 'SubmissionPage' and BreadcrumbItemHistorySessionBean.lastPageIdentifier != 'EditItemPage' and BreadcrumbItemHistorySessionBean.lastPageIdentifier != 'EasySubmissionPage' and DepositorWSSessionBean.newSubmission and ContextListSessionBean.depositorContextListSize>0}">
 		<h:outputText value="#{lbl.mainMenu_lblSubmission}" />
 	</h:outputLink>
