legalCaseCourDateId changed to legalCaseCourtDateId
Former-commit-id: ea0fec7cca3a49c6d725642fb338e84047fff750

--- a/pubman/pubman_presentation/src/main/webapp/viewItem/LegalCaseGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/LegalCaseGroup.jspf
@@ -44,8 +44,8 @@
 				<h:outputText value="#{lbl.ViewItemFull_lblLegalCaseCourtNameIdDate}"/><span class="noDisplay">: </span>
 			</b>
 			<span class="xHuge_area0 xTiny_marginLExcl endline">
-				<h:outputText value="#{ViewItemFull.legalCaseCourDateId}"/>
-				<h:outputText value="#{lbl.lbl_noEntry}" rendered ="#{(ViewItemFull.legalCaseCourDateId == null || ViewItemFull.legalCaseCourDateId == '')}"/>
+				<h:outputText value="#{ViewItemFull.legalCaseCourtDateId}"/>
+				<h:outputText value="#{lbl.lbl_noEntry}" rendered ="#{(ViewItemFull.legalCaseCourtDateId == null || ViewItemFull.legalCaseCourtDateId == '')}"/>
 			</span>
 		</div>
 <%-- Legal Case title --%>
