--- a/pubman/pubman_presentation/src/main/webapp/search/ui/ContextCriterionCollection.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/search/ui/ContextCriterionCollection.jspf
@@ -46,10 +46,10 @@
 				</b>
 
 				<span class="xHuge_area0 xTiny_marginLExcl endline">
-					<h:outputLabel id="context" styleClass="noDisplay" value="#{contextCriterionBean.context}"/>
+					<h:outputLabel id="context" value="#{contextCriterionBean.context}"/>
 
 					<b class="quad_label">&#160;</b>
-					<h:selectOneMenu styleClass="large_select" id="selectContext" value="#{contextCriterionBean.contextCriterionVO.searchString}" onchange="submit()" valueChangeListener="#{contextCriterionBean.contextChanged}" immediate="true">
+					<h:selectOneMenu styleClass="large_select" id="selectContext" value="#{contextCriterionBean.context}" onchange="submit()" valueChangeListener="#{contextCriterionBean.contextChanged}" immediate="true">
 						<f:selectItems value="#{AdvancedSearchEdit.contextCriterionCollection.contextList}"/>
 					</h:selectOneMenu>
 
