--- a/pubman/pubman_presentation/src/main/webapp/workspaces/ChooseWorkspace.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/workspaces/ChooseWorkspace.jspf
@@ -86,7 +86,7 @@
 		</div>
 	</div>
 </h:panelGroup>				
-<h:panelGroup rendered="#{(LoginHelper.isModerator || LoginHelper.isDepositor) and ContextListSessionBean.moderatorContextListSize>0}">
+<h:panelGroup rendered="#{(LoginHelper.isModerator || LoginHelper.isDepositor) and ContextListSessionBean.yearbookContextListSize>0}">
 	<div class="full_area0 itemHeader">
 		<span class="xLarge_area0 endline">
 			&#160;
