Startpage aligned to style guide. Lists/Status area aligned to style guide.

--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_blue/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_blue/styles/appearance.css
@@ -135,7 +135,7 @@ FORM BG			#FFFFFF
 
 	input, textarea, select {
 		border-style: solid;
-		border-color: #524240;
+		border-color: #AFA9A8;
 	}
 	
 	input[type="text"], textarea, select {
