--- a/pubman/pubman_presentation/src/main/webapp/header/Header.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/header/Header.jspf
@@ -22,8 +22,8 @@
 
 
             Copyright 2006-2010 Fachinformationszentrum Karlsruhe Gesellschaft
-            fï¿½r wissenschaftlich-technische Information mbH and Max-Planck-
-            Gesellschaft zur Fï¿½rderung der Wissenschaft e.V.
+            für wissenschaftlich-technische Information mbH and Max-Planck-
+            Gesellschaft zur Förderung der Wissenschaft e.V.
             All rights reserved. Use is subject to license terms.
              */
 %>
@@ -57,6 +57,7 @@
 	<div class="full_area0 LogoNSearch">
 		<h:outputLink id="lnkStartPage" title="#{tip.navigation_lblStartpage}" value="#{ApplicationBean.appContext}HomePage.jsp">
 			<span class="xTiny_marginLExcl half_area0 headerLogo">
+
 				<h:panelGroup styleClass="half_area0 themePark #{Header.serverLogo}"></h:panelGroup>
 			</span>
 		</h:outputLink>
@@ -70,6 +71,6 @@
 	<jsp:directive.include file="ui/MainMenu.jspf"/>
 
 <!-- end: header section -->
-</div>
+
 
 </f:subview>
